tests/expectations/compiler/address/special_address.out
DCE_ENABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found ')'
    --> compiler-test:7:34
     |
   7 |         assert_eq(a, self.address);
     |                                  ^
DCE_DISABLED:
Error [EPAR0370009]: unexpected string: expected 'identifier', found ')'
    --> compiler-test:7:34
     |
   7 |         assert_eq(a, self.address);
     |                                  ^